# 18848-Project

./: README.md  client.py  server.py
Rpi/: client.py  server.py
kinect/: CMakeLists.txt  glview.c  hiview.c
kinect/c_sync/: CMakeLists.txt  libfreenect_sync.c  libfreenect_sync.h
